@@ -2,6 +2,10 @@ $Id$
 
 v0.83.6		17-Dec-2005
 
+	mbtask:
+		Better messages during servers connections reset.
+
+
 v0.83.5		16-Dec-2005 - 17-Dec-2005
 
 	mbtask:
